src/components/Home/Menu/Menu.css
.site-content {
    max-width: 1100px;
    height: 100vh;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

.site-content__headline {
    font-weight: 200;
    color: #ffffff;
    font-size: calc(2vw + 10px);
}

/* default state */
.menu-icon {
    height: 30px;
    width: 30px;
    position: fixed;
    z-index: 2;
    right: 20px;
    top: 30px;
    cursor: pointer;
    fill: white !important;

}
.menu-icon span {
    fill: white !important;
}

@media  screen and (min-width: 768px) {
    .menu-icon {
        left: 20px;
        right: 0;
    }
}

.menu-icon__line {
    height: 2px;
    width: 30px;
    display: block;
    color: white;
    background-color: #ffffff !important;
    margin-bottom: 4px;
    transition: transform .2s ease, background-color .5s ease;
}

.menu-icon__line-left {
    width: 15px;
    color: white;
}

.menu-icon__line-right {
    width: 15px;
    float: right;
}

.nav {
    width: 100vw;
    height: auto;
    position: fixed;
    z-index: 1;
    height: -webkit-fill-available;
}

.nav:before,
.nav:after {
    content: "";
    position: fixed;
    width: 100vw;
    height: 100vh;
    background: rgba(234, 234, 234, .2);
    z-index: -1;
    transition: transform cubic-bezier(.77, 0, .175, 1) .8s;
    transform: translateX(0%) translateY(-100%);
}

.nav:after {
    background: linear-gradient(45deg, #383131, #1f1d1d);
    transition-delay: 0s;
}

.nav:before {
    transition-delay: .1s;
}

.nav__content {
    position: fixed;
    top: 50%;
    transform: translate(0%, -50%);
    width: 100%;
    text-align: center;
    font-size: calc(2vw + 10px);
    font-weight: 200;
    cursor: pointer;
}

.nav__list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 30px;
    max-width: fit-content;
    margin: auto;
}

.nav__list-item {
    color: white
}

.nav__list-item:hover {
    color: orange !important;
}

@media screen and (min-width: 768px) {
    .nav__list {
        flex-direction: row;
    }
}

.nav__list-item {
    position: relative;
    display: inline-block;
    transition-delay: .8s;
    opacity: 0;
    transform: translate(0%, 100%);
    transition: opacity .2s ease, transform .3s ease;
    margin-right: 25px;
}

body.nav-active .nav:after {
    left: 0;
}

.nav__list-item:before {
    content: "";
    position: absolute;
    background: #000000;
    width: 20px;
    height: 1px;
    top: 100%;
    transform: translate(0%, 0%);
    transition: all .3s ease;
    z-index: -1;
}

.nav__list-item:hover:before {
    width: 100%;
}

/* active state */
body.nav-active .menu-icon__line {
    background-color: #000;
    transform: translateX(0px) rotate(-45deg);
}

body.nav-active .menu-icon__line-left {
    transform: translateX(1px) rotate(45deg);
}

body.nav-active .menu-icon__line-right {
    transform: translateX(-2px) rotate(45deg);
}

body.nav-active .nav {
    visibility: visible;
}

body.nav-active .nav:before,
body.nav-active .nav:after {
    transform: translateX(0%) translateY(0%);
}

body.nav-active .nav:after {
    transition-delay: .1s;
}

body.nav-active .nav:before {
    transition-delay: 0s;
}

body.nav-active .nav__list-item {
    opacity: 1;
    transform: translateX(0%);
    transition: opacity .3s ease, transform .3s ease, color .3s ease;
}

body.nav-active .nav__list-item:nth-child(1) {
    transition-delay: 1.3s;
}

body.nav-active .nav__list-item:nth-child(2) {
    transition-delay: 1.4s;
}

body.nav-active .nav__list-item:nth-child(3) {
    transition-delay: 1.5s;
}

body.nav-active .nav__list-item:nth-child(4) {
    transition-delay: 1.6s;
}

